--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <script src="phonegap.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
+<script src="lib/handlebars.js"></script>
 <script src="js/storage/memory-store.js"></script>
 <script src="js/main.js"></script>
 
