--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </script>
 <script src="phonegap.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
-<script src="js/storage/memory-store.js"></script>
+<script src="js/storage/websql-store.js"></script>
+<!-- <script src="js/storage/memory-store.js"></script> -->
 <script src="js/HomeView.js"></script>
 <script src="js/main.js"></script>
 
